--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,15 +1,33 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-  "extends": "./tsconfig.json",
-  "compilerOptions": {
-    "outDir": "./out-tsc/app",
-    "types": []
-  },
-  "files": [
-    "src/main.ts",
-    "src/polyfills.ts"
-  ],
-  "include": [
-    "src/**/*.d.ts"
-  ]
+    "extends": "./tsconfig.json",
+    "compilerOptions": {
+        "outDir": "./out-tsc/app",
+        "types": [],
+        "resolveJsonModule": true,
+        "paths": {
+            "@services/*": [
+                "src/app/services/*"
+            ],
+            "@models/*": [
+                "src/app/models/*"
+            ],
+            "@components/*": [
+                "src/app/components/*"
+            ],
+            "@shared/*": [
+                "src/app/shared/*"
+            ],
+            "@config/*": [
+                "src/app/*"
+            ]
+        }
+    },
+    "files": [
+        "src/main.ts",
+        "src/polyfills.ts"
+    ],
+    "include": [
+        "src/**/*.d.ts"
+    ]
 }
