allow users to change their profile img

--- a/src/app/app.config.json
+++ b/src/app/app.config.json
@@ -18,5 +18,5 @@
         "measurementId": "G-ZYNHXEB5GM"
     },
 
-    "defaultUserImageURl": "https://firebasestorage.googleapis.com/v0/b/alin-licenta-c406d.appspot.com/o/userImages%2Fdefault-user-image.png?alt=media&token=c8ff7d2f-17bd-4eaa-88a1-06e63518f997"
+    "defaultUserImageURl": "https://firebasestorage.googleapis.com/v0/b/alin-licenta-c406d.appspot.com/o/profileImages%2Fdefault-user-image.png?alt=media&token=fe468561-a81c-4812-9243-0a3cb0a092f2"
 }
