--- a/firebase.json
+++ b/firebase.json
@@ -1,40 +1,66 @@
 {
-    "firestore": {
-        "rules": "firestore.rules",
-        "indexes": "firestore.indexes.json"
-    },
-    "hosting": {
-        "public": "dist/licenta",
-        "ignore": [
-            "firebase.json",
-            "**/.*",
-            "**/node_modules/**"
-        ],
-        "rewrites": [
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "hosting": [
+    {
+      "public": "dist/licenta",
+      "ignore": [
+        "firebase.json",
+        "**/.*",
+        "**/node_modules/**"
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ],
+      "headers": [
+        {
+          "source": "**/*.@(jpg|jpeg|gif|png)",
+          "headers": [
             {
-                "source": "**",
-                "destination": "/index.html"
+              "key": "Cache-Control",
+              "value": "max-age=7200"
             }
-        ],
-        "headers": [
+          ]
+        }
+      ]
+    },
+    {
+      "target": "licenta",
+      "public": "dist/licenta",
+      "ignore": [
+        "**/.*"
+      ],
+      "headers": [
+        {
+          "source": "*.[0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f][0-9a-f].+(css|js)",
+          "headers": [
             {
-                "source": "**/*.@(jpg|jpeg|gif|png)",
-                "headers": [
-                    {
-                        "key": "Cache-Control",
-                        "value": "max-age=7200"
-                    }
-                ]
+              "key": "Cache-Control",
+              "value": "public,max-age=31536000,immutable"
             }
-        ]
-    },
-    "storage": {
-        "rules": "storage.rules"
-    },
-    "functions": {
-        "predeploy": [
-            "npm --prefix \"$RESOURCE_DIR\" run lint",
-            "npm --prefix \"$RESOURCE_DIR\" run build"
-        ]
+          ]
+        }
+      ],
+      "rewrites": [
+        {
+          "source": "**",
+          "destination": "/index.html"
+        }
+      ]
     }
+  ],
+  "storage": {
+    "rules": "storage.rules"
+  },
+  "functions": {
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint",
+      "npm --prefix \"$RESOURCE_DIR\" run build"
+    ]
+  }
 }
