--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
         "target": "es2015",
         "module": "es2020",
         "resolveJsonModule": true,
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
         "lib": [
             "es2018",
             "dom"
