--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@firebase/database-types": "^0.7.2",
     "firebase": "^8.6.8",
     "ngx-pagination": "^5.1.1",
+    "ngx-toastr": "^13.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
